bug: fixes too narrow column width

--- a/web/src/App/App.css
+++ b/web/src/App/App.css
@@ -44,7 +44,7 @@
   resize: horizontal;
   height: 100%;
   display: block;
-  width: 40%;
+  width: 60%;
 } 
 
 .repo-detail {
